Fix links title misalignment Fixes #37

--- a/style.css
+++ b/style.css
@@ -266,6 +266,11 @@ nav a:hover {
     gap: 64px;
 }
 
+#links-section .section-title {
+    position: relative;
+    right: 5px;
+}
+
 #social-links {
     display: flex;
     flex-direction: column;
